--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,10 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile (name:'aarlib-release', ext:'aar')
+//    compile (name:'aarlib-release', ext:'aar')//直接从libs目录下引用lint
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+    compile 'com.github.iveswang:custom-lint:1.0'
 }
